@@ -1,5 +1,6 @@
 
 import org.gradle.api.Project
+import org.gradle.api.JavaVersion
 import org.gradle.api.tasks.compile.JavaCompile
 import org.gradle.jvm.toolchain.JavaLanguageVersion
 import org.gradle.jvm.toolchain.JavaToolchainService
@@ -12,15 +13,33 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
  * Centralized JVM toolchain and compilation configuration for all Genesis modules.
  */
 object GenesisJvmConfig {
+    /**
+     * The JVM version used throughout the Genesis project.
+     *
+     * Java 25 bytecode is:
+     * - Firebase compatible
+     * - Maximum target supported by Kotlin 2.2.x/2.3.x
+     * - Enables modern Java features with backward compatibility via desugaring
+     */
+    const val JVM_VERSION = 25
     const val JVM_VERSION_INT = 25
     val KOTLIN_JVM_TARGET = JvmTarget.JVM_25
 
     /**
-     * Configures the Kotlin and Java compilation settings for the given project.
+     * Configure the Kotlin JVM toolchain and Kotlin compilation options for the given Gradle project.
+     *
+     * Explicitly sets:
+     * - Kotlin `compilerOptions.jvmTarget` to JVM_VERSION (25)
+     * - Java compilation tasks to target JVM_VERSION (25)
+     * - Compiler opt-in flags for experimental APIs
+     * - JDK release target via `-Xjdk-release`
+     *
+     * @param project The Gradle project to configure.
      */
     fun configureKotlinJvm(project: Project) {
         with(project) {
-            // 1. Configure Kotlin Compilation Tasks
+            // Configure Kotlin compilation to match Java toolchain
+            // MUST match the target used in GenesisApplicationPlugin and GenesisLibraryHiltPlugin (JVM 25)
             tasks.withType<KotlinCompile>().configureEach {
                 compilerOptions {
                     jvmTarget.set(KOTLIN_JVM_TARGET)
@@ -36,20 +55,36 @@ object GenesisJvmConfig {
                 }
             }
 
-            // 2. Configure Java Compilation Tasks
+            // Explicitly configure Java compilation tasks to target JVM 25
             tasks.withType<JavaCompile>().configureEach {
+                sourceCompatibility = JavaVersion.VERSION_25.toString()
+                targetCompatibility = JavaVersion.VERSION_25.toString()
+            }
+
+            // Configure toolchain - use afterEvaluate so extensions are ready
+            afterEvaluate {
+                // Technique 1: Try via 'kotlin' extension (Standard/External)
                 try {
-                    val javaToolchains = project.extensions.getByType<JavaToolchainService>()
-                    javaCompiler.set(javaToolchains.compilerFor {
-                        languageVersion.set(JavaLanguageVersion.of(JVM_VERSION_INT))
-                    })
-                } catch (_: Exception) {
-                    // Fallback
+                    extensions.findByType(org.jetbrains.kotlin.gradle.dsl.KotlinProjectExtension::class.java)?.apply {
+                        jvmToolchain(JVM_VERSION)
+                    }
+                } catch (e: Exception) {
+                    logger.debug("Could not configure toolchain via 'kotlin' extension: ${e.message}")
                 }
-                sourceCompatibility = JVM_VERSION_INT.toString()
-                targetCompatibility = JVM_VERSION_INT.toString()
-                options.compilerArgs.add("--enable-preview")
-                options.encoding = "UTF-8"
+
+                // Technique 2: Try via 'android' extension (AGP 9.0 Built-in)
+                try {
+                    // This is harder to do type-safely without importing AGP internal types,
+                    // but we can try to find the extension named "android"
+                    val android = extensions.findByName("android")
+                    if (android != null) {
+                        // AGP 9.0 built-in Kotlin might expose a 'kotlin' block
+                        // Alternatively, we rely on compileOptions.sourceCompatibility/targetCompatibility
+                        // which are already set in the convention plugins.
+                    }
+                } catch (e: Exception) {
+                    logger.debug("Could not configure toolchain via 'android' extension: ${e.message}")
+                }
             }
         }
     }
